--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ hr {
   border-radius: 6px;
   margin-bottom: 20px;
 }
-.button-searchCity {
+.search-button {
   background: #885df1;
   color: #fff;
   border: none;
@@ -72,7 +72,6 @@ hr {
 .current-temperature-icon {
   position: relative;
   top: -8px;
-  left: 20px;
   font-size: 40px;
   margin-right: 10px;
 }
@@ -84,7 +83,6 @@ hr {
   font-size: 28px;
   position: relative;
   top: -38px;
-  left: -10px;
 }
 .weeklyForecast {
   display: flex;
